[[bench]]
name = "example"
harness = false

[package]
name = "adder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "^0.1.5"
mockall = "^0.11.2"
async-trait = "^0.1.57"
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "^3.2.16", features = ["derive"] } 